# compilers-tasks

./: .clang-format  .gitignore  CMakeLists.txt
src/ast/: declarations.hpp  expressions.hpp  statements.hpp
src/ast/visitors/: print_visitor.hpp  visitor.hpp
src/lex/: ident_table.hpp  lexer.cpp  lexer.hpp  scanner.cpp  scanner.hpp  token.hpp  token_type.hpp
tests/: CMakeLists.txt  main.cpp
tests/tralf_strues/: cases.cpp
